--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <header>
-        <ul>
+        <nav>
             <li><a href="https://github.com/rickybehrens">Github</a></li>
             <li><a href="Portafolio"></a></li>
             <li><a href="mailto: behrensricardo@gmail.com">Contact</a></li>
-        </ul>
+        <nav>
     </header>
 
     <main>
