changes to the header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="header">
             <li><a href="https://github.com/rickybehrens">Github</a></li>
-            <li><a href="Portafolio"></a></li>
+            <li><a href="Portafolio"></a>Portafolio</li>
             <li><a href="mailto: behrensricardo@gmail.com">Contact</a></li>
         <nav>
     </header>
